--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ main {
 .productos{
     width: 90%;
     margin:auto;
+   
 }
 .productos h2 {
     margin: 30px;
@@ -95,7 +96,9 @@ main {
 .productos h2 a {
     font-size: 15px;
 }
-
+.productos img{
+    flex-wrap: wrap;
+}
 .producto-card {
     height: 300px;
     width: 200px;
@@ -113,6 +116,7 @@ main {
 .producto-card img {
     width: 100%;
     height: 232px;
+    object-fit:contain;
 }
 
 .producto-card a {
@@ -146,7 +150,7 @@ main {
 .btn.btn-primary{
   display: flex;
   justify-content: center;
-   
+  
    
 }
 
@@ -159,6 +163,7 @@ main {
 .hbo{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .hbo img{
     width: 350px;
@@ -169,10 +174,16 @@ main {
 .propaganda{
     width: 90%;
     margin:auto;
+    display: flex;
+   
+    
     
 }
 .propaganda img{
     width: 100%;
     height: 250px;
-    padding: 10px;
+    margin:30px ;
+    object-fit:cover;
+   
+    
 }
