--- a/css/style.css
+++ b/css/style.css
@@ -217,3 +217,70 @@ main {
     font-size: 27px;
     color: rgb(68, 67, 67);
 }
+
+
+/*------------mediaquery---------*/
+@media screen and (max-width:900px) {
+    .tarjetas{
+        display: flex;
+        flex-direction: column;
+    }
+    .carousel-inner .carousel-item img{
+        width: 50%;
+    }
+    .hbo{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    .propaganda{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .ofertas{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: aliceblue;
+    }
+}
+
+
+@media screen and (max-width:600px){
+    .hbo{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    .hbo img{
+        margin: 5px;
+    }
+    .ofertas{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: aliceblue;
+    }
+    .ofertas-contenedor p{
+        font-size: 30px;
+        padding: 5px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width:500px){
+    .producto-card{
+        width: 100%;
+    }
+    .d-block.w-100{
+        width: 50%;
+    }
+    .propaganda{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
